--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "ai-fusion-lab",
   "version": "0.1.0",
   "private": true,
- 
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@arcjet/inspect": "^1.0.0-beta.13",
+    "@arcjet/next": "^1.0.0-beta.13",
     "@clerk/nextjs": "^6.33.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.7",
